--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="static/assets/css/style.css">
-        <link rel="icon" href="https://cdn.discordapp.com/attachments/804989622441607179/1108084398982697111/c9a542d8f108103d73f8337249d7b7b8.png">
+        <link rel="icon" href="static/assets/css/ico.png">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -15,13 +15,12 @@
     <body>
         <div class="wrapper">
             <header class="header">
-                <a href="#" class="logo">Logo</a>
+                <a href="#" class="logo">Alnyz</a>
                 <nav class="navbar">
                     <a href="#" style="--i:1" class="active">Home</a>
                     <a href="#" style="--i:2">About</a>
                     <a href="#" style="--i:3">Contact</a>
                     <a href="#" style="--i:4">APIs</a>
-                    <a href="#" style="--i:5">Skills</a>
                 </nav>
             </header>
             <section class="home">
@@ -29,18 +28,18 @@
                     <h3>Hello, It's Me</h3>
                     <h1 style="color: cyan;">Alnyz</h1>
                     <h3>And I'm a <span class="text"></span></h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                    <p>I'm Backend and Data Engineer, also currently im working on Analysis Company as Data Engineer and Scraper Website.</p>
                     <div class="home-sci">
                         <a href="#" style="--i:7">
                             <i class='bx bxl-facebook-circle'></i>
                         </a>
-                        <a href="#" style="--i:8">
+                        <a href="https://github.com/Alnyz" target="_blank" style="--i:8">
                             <i class='bx bxl-github'></i>
                         </a>
-                        <a href="#" style="--i:9">
+                        <a href="https://www.instagram.com/__alnyz/" target="_blank" style="--i:9">
                             <i class='bx bxl-instagram'></i>
                         </a>
-                        <a href="#" style="--i:10">
+                        <a href="https://t.me/alnyz" target="_blank" style="--i:10">
                             <i class='bx bxl-telegram'></i>
                         </a>
                     </div>
